//cd C:\Users\дмитрий\marketserv\proto
//protoc --proto_path=. --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative order.proto
syntax = "proto3";

package order;

option go_package = "proto/order;order";

service UserService {
  rpc FindClientByUsername (FindClientByUsernameRequest) returns (FindClientByUsernameResponse);
  rpc SearchProductByName (SearchProductByNameRequest) returns (SearchProductByNameResponse);
  rpc AddProductToCart(AddToCartRequest) returns (AddToCartResponse);
}

message FindClientByUsernameRequest {
  string id = 1;
}

message FindClientByUsernameResponse {
  string id = 1;
  string username = 2;
  string role = 3;
}

message SearchProductByNameRequest {
  string name = 1;
}

message SearchProductByNameResponse {
  repeated Product products=1;
}

message Product {
  int32  id =1;
  string name =2;
  string description =3;
  string  price =4;
}

message AddToCartRequest {
  int32 user_id = 1;
  int32 product_id = 2;
  int32 quantity = 3;
}

message AddToCartResponse {
  string message = 1;
}



